--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <!-- internet izni vermek -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- resim dosayası icin -->
+    <!-- <uses-permission android:name="android.permission.LOCAL_MAC_ADDRESS" /> -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- Camera -->
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- telefon rehberr izni -->
+    <uses-permission android:name="android.permission.READ_CONTACTS" /> <!-- Konum almak -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <!--internet izni vermek-->
-    <uses-permission android:name="android.permission.INTERNET"/>
-
-    <!--resim dosayası icin-->
-   <!-- <uses-permission android:name="android.permission.LOCAL_MAC_ADDRESS" />-->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
-    <!--Camera-->
-    <uses-permission android:name="android.permission.CAMERA"/>
-
-    <!--telefon rehberr izni-->
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-
-    <!--Konum almak-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
-
-    <!--application-->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -31,6 +20,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PeerToPeerMessage"
         tools:targetApi="31">
+        <activity
+            android:name=".TelephoneValidation"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".RegisterActivity"
             android:exported="false">
