--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PeerToPeerMessage"
         tools:targetApi="31">
+
+        <activity
+            android:name=".VkiActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".Chronometre"
             android:exported="false">
@@ -50,6 +58,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:windowSoftInputMode="stateAlwaysVisible"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
