--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,9 @@
     <uses-permission android:name="android.permission.CAMERA" /> <!-- telefon rehberr izni -->
     <uses-permission android:name="android.permission.READ_CONTACTS" /> <!-- Konum almak -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <!-- Wifi -->
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- Wifi -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -24,7 +22,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PeerToPeerMessage"
         tools:targetApi="31">
-
+        <activity
+            android:name=".EmailSendActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".VkiActivity"
             android:exported="false">
@@ -62,9 +66,9 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:windowSoftInputMode="stateAlwaysVisible"
+            android:exported="true"
             android:screenOrientation="portrait"
-            android:exported="true">
+            android:windowSoftInputMode="stateAlwaysVisible">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
